<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz App</string>

    <string name="quiz_introduction">
        Simple general knowledge quizzes. Write your answer below and click on the submit button to see how well you did!
    </string>

    <string name="first_question">
        Which is the hottest place in the earth?
    </string>

    <string name="second_question">
        Which is the animal referred as the ship of the desert?
    </string>

    <string name="third_question">
        Which is the nearest star to planet earth?
    </string>

    <string name="fourth_question">
        Which is the fastest animal on the land?
    </string>

    <string name="fifth_question">
        Which is the most sensitive organ in our body?
    </string>

    <string name="answer_hint">your answer</string>

    <string name="quiz">QUIZ</string>

    <string name="submit">submit</string>

    <string name="result">
        Your score is <xliff:g>%d</xliff:g>
    </string>
</resources>
